--- a/css/message.css
+++ b/css/message.css
@@ -2,6 +2,10 @@ body,html {
   font-family: 'Nanum Gothic', sans-serif;
 }
 
+h1{
+	text-align: center;
+}
+
 div.info{
   text-align: center;
   font-size: 2em;
